add host reachability check

--- a/140s/en.lproj/Localizable.strings
+++ b/140s/en.lproj/Localizable.strings
@@ -13,3 +13,5 @@
 "Sorry, Please try again later" = "Sorry, Please try again later";
 "PostPicture" = "Pic";
 "Exceed 140 characters limit" = "Exceed 140 characters limit";
+"Not able to access Weibo" = "Cannot access Sina Weibo";
+"Not able to access Weibo" = "Cannot access Twitter";
