--- a/140s/zh-Hans.lproj/Localizable.strings
+++ b/140s/zh-Hans.lproj/Localizable.strings
@@ -13,4 +13,6 @@
 "Sorry, Please try again later" = "抱歉，请稍后再试";
 "PostPicture" = "图片";
 "Exceed 140 characters limit" = "超出了140个字符的限制";
+"Not able to access Weibo" = "无法访问新浪微博";
+"Not able to access Twitter" = "无法访问新浪推特";
 
