ready for release

--- a/140s/en.lproj/Localizable.strings
+++ b/140s/en.lproj/Localizable.strings
@@ -5,6 +5,7 @@
   Created by qijun on 28/7/13.
   Copyright (c) 2013 fengqijun. All rights reserved.
 */
+"Language" = "en";
 "No Message" = "No Message";
 "Don't you want to say something?" = "Don't you want to say something?";
 "OK" = "OK";
