--- a/140s/zh-Hans.lproj/Localizable.strings
+++ b/140s/zh-Hans.lproj/Localizable.strings
@@ -5,6 +5,7 @@
   Created by qijun on 28/7/13.
   Copyright (c) 2013 fengqijun. All rights reserved.
 */
+"Language" = "cn";
 "No Message" = "内容为空";
 "Don't you want to say something?" = "不想说点什么吗？";
 "OK" = "好";
