add sent target and localize strings

--- a/140s/en.lproj/Localizable.strings
+++ b/140s/en.lproj/Localizable.strings
@@ -16,3 +16,6 @@
 "Exceed 140 characters limit" = "Exceed 140 characters limit";
 "Not able to access Weibo" = "Cannot access Sina Weibo";
 "Not able to access Weibo" = "Cannot access Twitter";
+"today" = "today";
+"yesterday" = "yesterday";
+"day's ago" = "day's ago";
