--- a/140s/zh-Hans.lproj/Localizable.strings
+++ b/140s/zh-Hans.lproj/Localizable.strings
@@ -16,4 +16,7 @@
 "Exceed 140 characters limit" = "超出了140个字符的限制";
 "Not able to access Weibo" = "无法访问新浪微博";
 "Not able to access Twitter" = "无法访问新浪推特";
+"today" = "今天";
+"yesterday" = "昨天";
+"day's ago" = "天前";
 
